final commit for today, made changes on JSPs. We have the Nav bar and product features ready

--- a/Rewards/src/main/resources/static/css/Modify.css
+++ b/Rewards/src/main/resources/static/css/Modify.css
@@ -1,20 +1,5 @@
 @charset "ISO-8859-1";
 
-.nav-text{
-	color:gray;
-}
-a:hover{
-	color:orange;
-}
-ul{
-	list-style-type:none;
-}
-
 .table-tasks{
-	margin-left: 10px;
-}
-
-#lForm{
-    padding-top: 30px;
-
+	text-align : left;
 }
