worked on the display of the products

--- a/Rewards/src/main/webapp/WEB-INF/css/style.css
+++ b/Rewards/src/main/webapp/WEB-INF/css/style.css
@@ -1,4 +1,13 @@
-@charset "ISO-8859-1";
+.wrapper{
+	max-width:30%;
+	margin: 10% auto;
+	text-align:center;
+}
+
+form > span{
+	color:red;
+}
+
 
 #wrapper{
 	text-align : center;
